# wata-board

./: .gitignore  DATABASE_ASSIGNMENT_SUMMARY.md  DATABASE_DOCUMENTATION_QUICK_REFERENCE.md  DATABASE_DOCUMENTATION_VERIFICATION.md  FEE_ESTIMATION_FEATURE.md  FEE_ESTIMATION_PR.md  FINAL_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PR_COMPREHENSIVE_TEST_COVERAGE.md  PR_DATABASE_DOCUMENTATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FINAL.md  README.md  TEST_COVERAGE_REPORT.md  TEST_DATABASE_DOCUMENTATION.md  WALLET_BALANCE_IMPLEMENTATION.md  run-tests.sh
shared/: network-config.ts
wata-board-dapp/: .env.example  README_TESTING.md  jest.config.js  package-lock.json  package.json  tsconfig.json
wata-board-dapp/nepa_contract/: Cargo.toml
wata-board-dapp/nepa_contract/src/: index.ts  lib.rs  test.rs
wata-board-dapp/src/: index.ts  payment-service.ts  rate-limiter.ts  server.ts
wata-board-dapp/src/test/: error-scenarios.test.ts  payment-service.test.ts  rate-limiter.test.ts  server.integration.test.ts  setup.ts
wata-board-dapp/src/utils/: env.ts  logger.ts  network-config.ts
wata-board-dapp/tests/load/: load-test.yml  users.csv
wata-board-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
wata-board-frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
wata-board-frontend/src/components/: LanguageSwitcher.tsx  MobileNavigation.tsx  NetworkSwitcher.tsx  PaymentDetailsModal.tsx  PaymentHistoryList.tsx  ReceiptVoucher.tsx  ResponsiveNavigation.tsx  ThemeSwitcher.tsx  WalletBalance.tsx
(+30 files in other folders)
